--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
       <div class="mala">
         <h2 id="c1">Mala torta</h2>
         <p>Mala torta veličine 6 inča. Idealna za manje proslave ili intimna okupljanja - dovoljno za 6 do 8 porcija</p>
-        <img src="tihana/mala.jpg" style="width: 50%; padding-top: 150px;">
+        <img src="tihana/mala.jpg">
       </div>
       <div class="srednja">
         <h2 id="c2">Srednja torta</h2>
         <p>Savršen izbor za obiteljske proslave i rođendane - služi 10 do 12 porcija.</p>
-        <img src="tihana/srednja.jpg" style="width: 30%; padding-top: 150px;">
+        <img src="tihana/srednja.jpg">
       </div>
       <div class="velika">
         <h2 id="c3">Velika torta</h2>
         <p>Veličina koja oduševljava na većim okupljanjima - dovoljno za 20+ porcija.</p>
-        <img src="tihana/velika.jpg" style="width: 40%; padding-top: 150px;">
+        <img src="tihana/velika.jpg">
       </div>
       <div class="keksi">
         <h2 id="c4">Keksi</h2>
         <p>Zaljubite se u miris i okus svježe pečenih keksa!</p>
-        <img src="tihana/breskvice.webp" style="width: 50%;padding-top: 150px;">
+        <img src="tihana/breskvice.webp">
       </div>
       <div class="Kontakt" id="kontakt">
       <h3 style="text-decoration: underline;">Kontakt</h3>
