--- a/cijene.html
+++ b/cijene.html
@@ -17,32 +17,26 @@
     </div>
     <hr>
     <div class="cjenik">
-        <table>
-            <tr>
-                <th>Veličine</th>
-                <th>Slojevi</th>
-                <th>Dodaci</th>
-                <th>Cijena</th>
-            </tr>
-            <tr>
-                <td>6 inča</td>
-                <td>jedan sloj</td>
-                <td>po izboru</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>8 inča</td>
-                <td>2 sloja</td>
-                <td>po izboru</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>10 inča</td>
-                <td>3 sloja</td>
-                <td>po izboru</td>
-                <td></td>
-            </tr>
-        </table>
+        <form action="/Users/filip/OneDrive/Desktop/patrick-faks/web/index.html">
+        <h2>Odaberi veličinu:</h2>
+        <p><input type="radio" id="sest" name="velicina" value="1"><label for="sest">6 inča</label></p>
+        <p></p><input type="radio" id="osam" name="velicina" value="2"><label for="osam">8 inča</label></p>
+        <p></p><input type="radio" id="deset" name="velicina" value="3"><label for="deset">10 inča</label></p>
+        <h2>Odaberi slojeve</h2>
+        <p><input type="radio" id="jedan" name="sloj" value="1"><label for="jedan">1 sloj</label></p>
+        <p><input type="radio" id="dva" name="sloj" value="2"><label for="dva">2 sloja</label></p>
+        <p><input type="radio" id="tri" name="sloj" value="3"><label for="tri">3 sloja</label></p>
+        <h2>Odaberi dodatke</h2>
+        <p><input type="radio" id="d1" name="d1"><label for="d1">Šlag</label></p>
+        <p><input type="radio" id="d2" name="d2"><label for="d2">Šumsko voće</label></p>
+        <p><input type="radio" id="d3" name="d3"><label for="d3">Borovnice</label></p>
+        <p><input type="radio" id="d4" name="d4"><label for="d4">Preljev</label></p>
+        <p><input type="radio" id="d5" name="d5"><label for="d5">Čokoladne mrvice</label></p>
+        <p><input type="radio" id="d6" name="d6"><label for="d6">Jagode</label></p>
+        <p style="padding-top: 50px;">Napomena:</p>
+        <p><textarea></textarea></p>
+        <p><input id="ponovo" type="reset" value="Ispočetka"><input id="pot" type="submit" value="Potvrdi"></p>
+        </form>
     </div>
 
   </body>
