--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="#c2"><h5>Srednja torta</h5></a>
             <a href="#c3"><h5>Velika torta</h5></a>
             <a href="#c4"><h5>Keksi</h5></a>
+            <a href="slozi.html"><h5>Složi svoju tortu</h5></a>
         </div>
         <div class="flex-item-right">
             <h4>O nama</h4>
